fix: overflow code

--- a/index.css
+++ b/index.css
@@ -46,3 +46,7 @@ body {
   width: 100%;
   height: calc(100% - 40px);
 }
+
+#htmlSourcecode {
+  overflow: initial;
+}
